--- a/SuDoku/SuDoku.csproj
+++ b/SuDoku/SuDoku.csproj
@@ -67,6 +67,7 @@
     <Compile Include="SuSolve.cs" />
     <EmbeddedResource Include="NumPad.resx">
       <DependentUpon>NumPad.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -79,6 +80,7 @@
     </Compile>
     <EmbeddedResource Include="SuDokuMainForm.resx">
       <DependentUpon>SuDokuMainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
