--- a/SuDoku/SuDoku.csproj
+++ b/SuDoku/SuDoku.csproj
@@ -47,8 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
-    <Compile Include="GameList.cs" />
-    <Compile Include="GameQueueItem.cs" />
+    <Compile Include="GameFile.cs" />
     <Compile Include="GameTable.cs" />
     <Compile Include="NumPad.cs">
       <SubType>Form</SubType>
