SuDokuV10-20160515-1-hu-HU-vanmég

--- a/SuDoku/SuDoku.csproj
+++ b/SuDoku/SuDoku.csproj
@@ -88,6 +88,7 @@
     </Compile>
     <EmbeddedResource Include="Resource.en.resx" />
     <EmbeddedResource Include="Resource.hu-HU.resx" />
+    <EmbeddedResource Include="Resource.resx" />
     <EmbeddedResource Include="SuDokuMainForm.en.resx">
       <DependentUpon>SuDokuMainForm.cs</DependentUpon>
     </EmbeddedResource>
